<resources>
    <string name="app_name">My Fluffy</string>

    <string name="toolbar_title_sign_up">반려동물 정보 등록</string>
    <string name="toolbar_title_sign_up_modify">반려동물 정보 수정</string>
    <string name="toolbar_title_info">기본 정보</string>
    <string name="toolbar_title_record">기록</string>
    <string name="toolbar_button_today">오늘</string>
    <string name="toolbar_button_daily">목록</string>
    <string name="toolbar_button_monthly">달력</string>




    <string name="sign_up_name">이름</string>
    <string name="sign_up_DOB">생년월일</string>
    <string name="sign_up_gender">성별</string>
    <string name="sign_up_female">암컷</string>
    <string name="sign_up_male">수컷</string>
    <string name="sign_up_weight">몸무게</string>


    <string name="FOOD">식사</string>
    <string name="TOILET">배변</string>
    <string name="CLINIC">진료</string>
    <string name="BATH">목욕</string>
    <string name="WALK">산책</string>
    <string name="DIARY">일기</string>
    <string name="HAIRCUT">미용</string>
    <string name="VACCINE">접종</string>
    <string name="MEDICINE">투약</string>
    <string name="ETC">기타</string>
    <string name="SYMPTOMS">이상</string>
    <string name="RECORD">기록</string>
    <string name="CALENDAR">캘린더</string>
    <string name="CLINICS">주변 병원</string>

    <string name="noRecord">아직 기록이 없어요!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
