<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LogActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/tbBtnPrev"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_chevron_left_black_24dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tbTvYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="yyyy"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/tbTvDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="MM / dd"
                    android:textSize="20dp" />
            </LinearLayout>

            <Button
                android:id="@+id/tbBtnNext"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_chevron_right_black_24dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/tbBtnSwitch"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:text="일간"
            android:textSize="12dp" />

        <Button
            android:id="@+id/tbBtnNow"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:text="오늘"
            android:textSize="12dp" />
    </android.support.v7.widget.Toolbar>



    <FrameLayout
        android:id="@+id/frag_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp">

        <LinearLayout
            android:id="@+id/linearCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <CheckBox
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/selector_food"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/FOOD"
                android:textColor="@android:color/transparent"/>

            <CheckBox
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/selector_toilet"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/TOILET"
                android:textColor="@android:color/transparent"/>


            <CheckBox
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/selector_walk"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/WALK"
                android:textColor="@android:color/transparent"/>


            <CheckBox
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/selector_symptoms"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/SYMPTOMS"
                android:textColor="@android:color/transparent"/>

            <CheckBox
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/selector_clinic"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/CLINIC"
                android:textColor="@android:color/transparent"/>

            <CheckBox
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/selector_bath"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/BATH"
                android:textColor="@android:color/transparent"/>


            <CheckBox
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/selector_haircut"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/HAIRCUT"
                android:textColor="@android:color/transparent"/>




            <CheckBox
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/selector_medicine"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/MEDICINE"
                android:textColor="@android:color/transparent"/>


            <CheckBox
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/selector_vaccine"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/VACCINE"
                android:textColor="@android:color/transparent"/>


            <CheckBox
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/selector_diary"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/DIARY"
                android:textColor="@android:color/transparent"/>


            <CheckBox
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/selector_etc"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/ETC"
                android:textColor="@android:color/transparent"/>

        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>