<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightgray"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:paddingHorizontal="32dp"
        android:paddingVertical="32dp">

        <ImageButton
            android:id="@+id/ibtnMainPic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/round_square"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvMainName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_square_r"
                android:textSize="14dp"
                android:text="NAME" />

            <TextView
                android:id="@+id/tvMainAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/nanum_square_r"
                android:textSize="14dp"
                android:text="AGE" />

            <TextView
                android:id="@+id/tvMainWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_square_r"
                android:textSize="14dp"
                android:text="WEIGHT" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearDaily"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="16dp"
        android:background="@drawable/round_square"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvToday"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:fontFamily="@font/nanum_square_b"
            android:text="오늘의 기록"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="4dp"
            android:paddingHorizontal="8dp"
            android:background="@drawable/round_square_outline"
            android:gravity="center_vertical"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_mini_food" />

                <TextView
                    android:id="@+id/tvTodayMealCnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:fontFamily="@font/nanum_square_b"
                    android:text="1 회"
                    android:textSize="14dp" />
                <TextView
                    android:id="@+id/tvTodayLastMeal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_square_r"
                    android:text="(0시간전)"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_mini_pee" />

                <TextView
                    android:id="@+id/tvTodayPeeCnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_square_b"
                    android:layout_margin="4dp"
                    android:text="1회"
                    android:textSize="14dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_mini_poo" />
                <TextView
                    android:id="@+id/tvTodayPooCnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_square_b"
                    android:layout_margin="4dp"
                    android:text="1회"
                    android:textSize="14dp" />

            </LinearLayout>

        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvNone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/nanum_square_b"
                android:text="@string/noRecord"
                android:textSize="14sp"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/linearToday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/linearToday1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginVertical="4dp"
                    android:visibility="visible">
                    <!--<ImageView
                        android:id="@+id/ivToday1"
                        android:layout_width="40dp"
                        android:layout_height="20dp"
                        android:background="#dddddd"/>-->
                    <TextView
                        android:id="@+id/tvTodayCate1"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:background="#dddddd"
                        android:gravity="center"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/nanum_square_b"
                        android:text="cate"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvTodayTime1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/nanum_square_b"
                        android:text="08:09"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvTodayTitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:singleLine="true"
                        android:fontFamily="@font/nanum_square_b"
                        android:text="title"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvTodayContent1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:fontFamily="@font/nanum_square_r"
                        android:text="contentccccccccccccccccccdddddddddccc"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearToday2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginVertical="4dp"
                    android:visibility="visible">
                    <!--<ImageView
                        android:id="@+id/ivToday2"
                        android:layout_width="40dp"
                        android:layout_height="20dp"
                        android:background="#dddddd"/>-->
                    <TextView
                        android:id="@+id/tvTodayCate2"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:background="#dddddd"
                        android:gravity="center"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/nanum_square_b"
                        android:text="cate"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvTodayTime2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/nanum_square_b"
                        android:text="08:09"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvTodayTitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/nanum_square_b"
                        android:text="title"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvTodayContent2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:fontFamily="@font/nanum_square_r"
                        android:text="contentccccccccccccccccccdddddddddccc"
                        android:textSize="14sp" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearToday3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="4dp"
                    android:visibility="visible">
                    <!--<ImageView
                        android:id="@+id/ivToday3"
                        android:layout_width="40dp"
                        android:layout_height="20dp"
                        android:background="#dddddd"/>-->
                    <TextView
                        android:id="@+id/tvTodayCate3"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:background="#dddddd"
                        android:gravity="center"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/nanum_square_b"
                        android:text="cate"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvTodayTime3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/nanum_square_b"
                        android:text="08:09"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvTodayTitle3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/nanum_square_b"
                        android:text="title"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvTodayContent3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:fontFamily="@font/nanum_square_r"
                        android:text="contentccccccccccccccccccdddddddddccc"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="16dp">

        <com.example.jisoo.myfluffy.SquareButton
            android:id="@+id/btnFood"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/ButtonDefaultText"
            android:drawableTop="@drawable/ic_main_food"
            android:text="@string/FOOD" />

        <com.example.jisoo.myfluffy.SquareButton
            android:id="@+id/btnToilet"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="16dp"
            style="@style/ButtonDefaultText"
            android:drawableTop="@drawable/ic_main_toilet"
            android:text="@string/TOILET" />

        <com.example.jisoo.myfluffy.SquareButton
            android:id="@+id/btnWalk"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/ButtonDefaultText"
            android:drawableTop="@drawable/ic_main_walk"
            android:text="@string/WALK" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="16dp">

        <com.example.jisoo.myfluffy.SquareButton
            android:id="@+id/btnRecord"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/ButtonDefaultText"
            android:drawableTop="@drawable/ic_main_record"
            android:text="@string/RECORD" />

        <com.example.jisoo.myfluffy.SquareButton
            android:id="@+id/btnMonthly"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="16dp"
            style="@style/ButtonDefaultText"
            android:drawableTop="@drawable/ic_main_cal"
            android:text="@string/CALENDAR" />

        <com.example.jisoo.myfluffy.SquareButton
            android:id="@+id/btnClinic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/ButtonDefaultText"
            android:drawableTop="@drawable/ic_main_clinic"
            android:text="@string/CLINICS" />
    </LinearLayout>
</LinearLayout>